
                     ngIRCd - Next Generation IRC Server
                           http://ngircd.barton.de/

               (c)2001-2024 Alexander Barton and Contributors.
               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --

ngIRCd 27

  - autogen.sh: Prefere automake 1.11 over other releases because this is the
    last release supporting "de-ANSI-fication" using the included ansi2knr tool.
    And becuase we _want_ to support old K&R platforms, we try hard to use this
    release of automake when available to generate our build system.
    Note: This is only relevant for you if you are building from Git sources.
  - Autodetect support for IPv6 by default: Until now, IPv6 support was disabled
    by default, which seems a bit outdated in 2024. Note: You still can pass
    "--enable-ipv6"/"--disable-ipv6" to the ./configure script to forcefully
    activate or deactivate IPv6 support.
  - Update config.guess and config.sub to recent versions
  - Remove the unmaintained contrib/MacOSX/ folder: this includes the Xcode
    project as well as the outdated macOS "Package Maker" configuration. The
    sample launchd(8) configuration properties list file was moved to
    "contrib/de.barton.ngircd.plist" and kept.
  - Fix Channel Admins being able to to set Channel Owner status! "Sarah"
    reported this back in April 2021 and proposed a patch, thanks a lot!
  - Test suite: Update for OpenSSL 3.x, some command outputs changed.
  - Fix showing the "Ident" option in "--configtest" output which was never
    shown because of a coding error. Whoops!
  - Change GnuTLS "slot handling" messages to debug level: Those messages are
    about an internal implementation detail, not relevant for an administrator
    of ngIRCd.
  - Enlarge buffer for log messages: For example, SSL/TLS certificate